# MCP-AmigaOS4

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  AGENTS_SETUP.md  BUILD.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  USAGE.md
.github/: PULL_REQUEST_TEMPLATE.md
host/: README.md  config.example.toml  pyproject.toml
host/src/amiga_fleet_mcp/: __init__.py  cli.py  config.py  errors.py  fleet.py  server.py  setup_wizard.py  upload.py
host/src/amiga_fleet_mcp/archive/: __init__.py  store.py
host/src/amiga_fleet_mcp/installer/: __init__.py  _amiga_fs.py  kicklayout.py  machines.py  manifest.py
host/src/amiga_fleet_mcp/installer/resources/: AmiDock.amiga.com.xml
host/src/amiga_fleet_mcp/installer/sequences/: __init__.py  _generic.py  _machine_config.py  _runner.py  _steps.py  a1222.py  amigaone.py  pegasos2.py  sam460.py  x5000.py
host/src/amiga_fleet_mcp/qemu/: __init__.py  cmdline.py
host/src/amiga_fleet_mcp/resources/: __init__.py  archive_resources.py
host/src/amiga_fleet_mcp/tools/: __init__.py  _helpers.py  debug.py  events.py  exec.py  fleet.py  fleet_discover.py  fs.py  installer.py  power.py  qemu.py  sandbox.py  serial.py  snapshots.py  sys.py  tests.py  wb.py
host/src/amiga_fleet_mcp/transports/: __init__.py  discovery.py  gdb.py  mcpd.py  p18.py  qmp.py  serial_capture.py
host/tests/: test_smoke.py
host/tests/unit/: test_archive.py  test_archive_resources.py  test_cmdline.py  test_cmdline_gdb.py  test_config.py  test_fanout.py  test_fs_transfer.py  test_installer_kicklayout.py  test_installer_machines.py  test_installer_manifest.py  test_installer_other_machines.py  test_installer_preflight.py  test_installer_primitives.py  test_installer_runner.py  test_installer_stage_verify.py  test_installer_x5000_seq.py  test_mcp_protocol.py  test_power.py  test_quorum.py  test_sandbox.py  test_setup_wizard.py  test_snapshots.py  test_sys_debug_ring.py  test_tests_tool.py  test_tools_with_fake_transport.py
mcpd/: Makefile  README.md
scripts/: _paths.py  apply-patches.sh  concurrent_x5000_qemu.py  crashtest.c  deploy_mcpd_x5000.py  fetch_x5000_kickstart.py  probe_mcu_debug.py  (+28 more)
(+34 files in other folders)
