[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "amiga-fleet-mcp"
version = "1.2"
description = "MCP server for driving AmigaOS 4 fleets (QEMU + real hardware)"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["../LICENSE"]
authors = [
  { name = "Richard Gibbs" },
]
keywords = ["mcp", "amigaos", "amiga", "qemu", "ppc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp[cli]>=1.0.0",
  "pydantic>=2.0",
  "pyserial>=3.5",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.scripts]
amiga-fleet-mcp = "amiga_fleet_mcp.server:main"

[project.urls]
Homepage = "https://github.com/derfsss/MCP-AmigaOS4"

[tool.hatch.build.targets.wheel]
packages = ["src/amiga_fleet_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
# We deliberately don't enable mypy `strict = true`: a number of the
# installer-sequence inner callbacks intentionally take an untyped
# `ctx` dict and the cost of annotating every one outweighs the
# benefit. The settings below catch the high-value classes of real
# type bugs (assignments, returns, redundant casts, unreachable code)
# while letting the untyped-def family pass.
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
# Third-party with no stubs — keep mypy quiet rather than pin a
# stubs package no one else in the ecosystem uses consistently.
[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
